--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "isolatedModules": true,
     "noImplicitAny": true,
     "jsx": "preserve",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
