changes to documents

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^1.0.0",
+    "@auth/mongodb-adapter": "^3.7.2",
     "@headlessui/react": "^1.7.18",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
@@ -22,17 +22,22 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/multer": "^1.4.12",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crisp-sdk-web": "^1.0.22",
+    "docx": "^9.0.2",
+    "docx-parser": "^0.2.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
     "lucide-react": "^0.453.0",
     "mailgun.js": "^9.4.1",
-    "mongodb": "^5.9.2",
+    "mammoth": "^1.8.0",
+    "mongodb": "^6.10.0",
     "mongoose": "^7.6.10",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "next-plausible": "^3.12.0",
